Further commit of static, hopeful addition of bulma and font-awesome

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,3 +5,20 @@
       [[=message]]
   </div>
 </div>
+<div class="columns">
+  <div class="column">
+    <a class="button is-primary" href="[[=URL('drivers_table')]]">
+      <!-- Should likely be signed -->
+      <!-- Also not displaying correctly as button -->
+      <span>Looking for Drivers</span>
+    </a>
+  </div>
+  <div class="column">
+    <a class="button is-primary" href="[[=URL('riders_table')]]">
+      <!-- Should likely be signed -->
+      <!-- Also not displaying correctly as button -->
+      <span>Looking for Riders</span>
+   </a>
+  </div>
+  
+</div>
