--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,10 +12,14 @@
   <body>
     <header>
       <!-- Navigation bar -->
-      <nav class="black">
+      <nav style="background-color: rgb(0, 60, 108); z-index: 1;">
+      
         <!-- Logo -->
         <a href="[[=URL('index')]]">
-          <b>py4web <script>document.write(window.location.href.split('/')[3]);</script></b>
+          <!-- logo can go here -->
+          <img src="[[=URL('static', 'logo_image.png')]]" style="display: inline-block; margin-top: 10px; height: 150px;">
+          <p style="display: inline-block; text-align: center; color: white; font-size: 100px;">SLUGGING</p>
+          <!-- <b>py4web <script>document.write(window.location.href.split('/')[3]);</script></b> -->
         </a>
         <!-- Do not touch this -->
         <label for="hamburger">☰</label>
@@ -38,8 +42,9 @@
             </ul>
           </li>
           [[else:]]
-          <li>
-            Login
+          <li style="color: white; background-color: rgb(242, 152, 19); width: 330px; height: 80px; 
+          font-size: 50px; padding: 10px; margin-top: 45px; margin-right: 20px; text-align: center; line-height: 55px;">
+            Sign In
             <ul>
               <li><a href="[[=URL('auth/register')]]">Sign up</a></li>
               <li><a href="[[=URL('auth/login')]]">Log in</a></li>
@@ -63,7 +68,7 @@
     <!-- end of HTML inserted by extending template -->
     <footer class="black padded">
       <p>
-        Made with py4web
+        <!-- Made with py4web -->
       </p>
     </footer>
   </body>
