--- a/templates/index.html
+++ b/templates/index.html
@@ -24,16 +24,13 @@
       
         <div class="column is-6" style="margin-top: 60px;">
           <a class="button is-primary" href="[[=URL('driver')]]">
-            <span style="display: inline-block; color: white; font-size: 50px; background-color: rgb(242, 152, 19); padding-right: 150px; padding-bottom: 20px;">DRIVER</span>
-          </a>
-        </div>
-      
-        <div class="column is-6">
+            <!-- <span style="display: inline-block; color: white; font-size: 50px; background-color: rgb(242, 152, 19); padding-right: 150px; padding-bottom: 20px;">DRIVER</span> -->
+            <span style="display: inline-block; color: white; font-size: 50px; background-color: rgb(242, 152, 19); height: 100px; padding-right: 60px; padding-left: 60px; padding-top: 35px; margin-left: 290px; margin-right: 210px;">DRIVER</span>
+          </a>&nbsp;
           <a class="button is-primary" href="[[=URL('rider')]]">
-            <span style="display: inline-block; color: white; font-size: 50px; background-color: rgb(242, 152, 19); padding-right: 183px; padding-bottom: 20px;">RIDER</span>
+            <span style="display: inline-block; color: white; font-size: 50px; background-color: rgb(242, 152, 19); height: 100px; padding-right: 80px; padding-left: 80px; padding-top: 35px;">RIDER</span>
           </a>
         </div>
-      </div>
       
       <!-- full width bg image column close -->
     </div>
