--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,8 +17,12 @@
         <!-- Logo -->
         <a href="[[=URL('index')]]">
           <!-- logo can go here -->
-          <img src="[[=URL('static', 'logo_image.png')]]" style="display: inline-block; margin-top: 10px; height: 150px;">
-          <p style="display: inline-block; text-align: center; color: white; font-size: 100px;">SLUGGING</p>
+          <img src="[[=URL('static', 'logo_image.png')]]" style="margin-top: 10px; height: 150px;">
+        </a>
+
+        <a href="[[=URL('index')]]">
+          <!-- logo can go here -->
+          <p style="text-align: center; color: white; font-size: 100px; margin-left: -200px;">SLUGGING</p>
           <!-- <b>py4web <script>document.write(window.location.href.split('/')[3]);</script></b> -->
         </a>
         <!-- Do not touch this -->
