--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,12 +4,26 @@
 <style>
 .avatar {
     vertical-align: middle;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
+    padding: 10px;
 }
 </style>
-
-
-<img src="[[=URL('static', 'profileTemplate.jpg')]]" class="avatar">
 <title>Profile</title>
+
+<h2>User Profile</h2>
+<div class="container is-mobile">
+    <img src="[[=URL('static', 'profileTemplate.jpg')]]", class="avatar">
+    
+</div>
+<div class="conatiner is-mobile">
+    Name: <br>
+    Driver or Rider <br>
+    Car Information and Number of Seats <br>
+    Pickup Location <br>
+    On-Campus Schedule <br>
+</div>
+<a class="button is-primary" href="[[=URL('editProfile')]]">
+    <span style="color: white; background-color: rgb(0, 60, 108);">Edit Profile</span>
+</a>
