--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <!-- Navigation bar -->
-    <nav class="navbar is-dark" role="navigation" aria-label="main navigation" style="background-color: rgb(0, 60, 108); z-index: 1; height: 170px;">
+    <nav class="navbar is-dark" role="navigation" aria-label="main navigation" style="background-color: rgb(0, 60, 108); z-index: 1; height: 160px;">
       <div class="navbar-brand">
         <a href="[[=URL('index')]]">
-          <img src="[[=URL('static', 'logo_image.png')]]" style="margin-top: 10px; height: 150px;">
+          <img src="[[=URL('static', 'logo_image.png')]]" style="margin-top: 10px; height: 130px;">
         </a>
         <a href="[[=URL('index')]]">
-          <p style="text-align: center; color: white; font-size: 100px; margin-left: -10px;">SLUGGING</p>
+          <p style="text-align: center; color: white; font-size: 100px; margin-left: -10px; font-family:Verdana, Geneva, Tahoma, sans-serif">SLUGGING</p>
         </a>
 
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="the-navbar-menu"
