--- a/templates/rider.html
+++ b/templates/rider.html
@@ -50,7 +50,7 @@
                 </p>
               </div>
               <div class="control">
-                <a class="button is-primary" href="[[=URL('editProfile')]]">Full Bio</a>
+                <a class="button is-primary" href="[[=URL('displayProfile')]]">Full Bio</a>
                 <button class="button is-primary">Message</button>
               </div>
             </div>
