Add choice of category for populated testing users

--- a/templates/driver.html
+++ b/templates/driver.html
@@ -30,7 +30,7 @@
           <article class="media">
             <div class="media-left">
               <figure class="image is-64x64">
-                <img src="path/to/profile-picture.jpg" alt="Profile Picture">
+                <img src="static/profileTemplate.jpg" alt="Profile Picture">
               </figure>
             </div>
             
