--- a/templates/rider.html
+++ b/templates/rider.html
@@ -48,7 +48,7 @@
                 </p>
               </div>
               <div class="control">
-                <a class="button is-primary" href="[[=URL('displayProfile')]]">Full Bio</a>
+                <a class="button is-primary" href="[[=URL('displayProfile', i['id'])]]">Full Bio</a>
                 <button class="button is-primary">Message</button>
               </div>
             </div>
