--- a/templates/driver.html
+++ b/templates/driver.html
@@ -1,5 +1,6 @@
 [[extend 'layout.html']]
-<p class="is-size-2">Riders looking for Drivers</p>
+
+<p class="is-size-2">Available Riders</p>
 
 <div class="section">
     <body>
@@ -43,27 +44,18 @@
                   <strong>Location</strong>: [[=i["location"]]]
                 </p>
                 <p>
-                  <strong>Car Make</strong>: [[=i["carMake"]]]
-                </p>
-                <p>
-                  <strong>Car Model</strong>: [[=i["carModel"]]]
-                </p>
-                <p>
-                  <strong>Number of Seats</strong>: [[=i["numSeats"]]]
-                </p>
-                <p>
                   <strong>Schedule</strong>: [[=i["schedule"]]]
                 </p>
               </div>
               <div class="control">
                 <a class="button is-primary" href="[[=URL('displayProfile', i['id'])]]">Full Bio</a>
-                <button class="button is-primary">Message</button>
+                <a class="button is-primary" href="[[=URL('message')]]">Message</a>
               </div>
             </div>
           </article>
         </div>
         [[pass]]
       </body>
-
+      
                   
 </div>
