fixed index.html UI and also combined the login and sign up button in top right of nav bar

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -16,5 +16,8 @@
 </style>
 
 <section class="section">
+  [[block page_menu_items]]
+  <!-- Add your custom menu items here -->
+  [[end]]
   [[=form]]
 </section>
