--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,16 @@
 [[extend 'layout.html']]
 
 <style>
+body {
+  background-image: url('[[=URL('static', 'bg_image.jpg')]]');
+  background-size: cover;
+  background-position: center;
+}
+
 [v-cloak] {
      display: none;
 }
 </style>
-
 
 <div class="section" id="vue-target" v-cloak>
   <!-- Put here your Vue.js template -->
@@ -19,34 +24,25 @@
   <div class="columns">
 
     <div class="column is-12">
-      <img src="[[=URL('static', 'bg_image.jpg')]]" style="display: block; margin: 0 auto; width: 100%; z-index: 0; margin-top: -200px;">
+      <!-- <img src="[[=URL('static', 'bg_image.jpg')]]" style="display: block; margin: 0 auto; width: 100%; z-index: 0; margin-top: -200px;"> -->
       
-      <!-- buttons on bg image -->
-      <div class="button-container" style="position: absolute; top: 80%; left: 50%; transform: translate(-50%, -130%); width: 100%;">
-
-        <div class="column is-full">
-          <div style="display: flex; justify-content: center;">
-            <p style="color: rgb(0, 60, 108); font-size: 120px;">LOOKING FOR:</p>
-          </div>
+      <div class="column is-full mt-6">
+        <div style="display: flex; justify-content: center;">
+          <p style="color: rgb(0, 60, 108); font-size: 150px;">LOOKING FOR:</p>
         </div>
-      
-        <div class="column is-6" style="margin-top: 60px;">
-          <a class="button is-primary" href="[[=URL('driver')]]">
-            <!-- <span style="display: inline-block; color: white; font-size: 50px; background-color: rgb(242, 152, 19); padding-right: 150px; padding-bottom: 20px;">DRIVER</span> -->
-            <span style="display: inline-block; color: white; font-size: 50px; background-color: rgb(242, 152, 19); height: 100px; padding-right: 60px; padding-left: 60px; padding-top: 35px;  margin-left: 290px; margin-right: 210px;">DRIVER</span>
-          </a>&nbsp;
-          <a class="button is-primary" href="[[=URL('rider')]]">
-            <span style="display: inline-block; color: white; font-size: 50px; background-color: rgb(242, 152, 19); height: 100px; padding-right: 80px; padding-left: 80px; padding-top: 35px;">RIDER</span>
-          </a>
-        </div>
+      </div>
+    
+      <div class="column is-full">
+        <a class="button is-primary" href="[[=URL('driver')]]" style="display: inline-block; color: white; font-size: 70px; background-color: rgb(242, 152, 19); height: 100px; line-height: 30px; padding-right: 40px; padding-left: 40px; padding-top: 35px; margin-left: 200px; margin-right: 0;">DRIVER</a>
+        <!-- </a>&nbsp; -->
+        <a class="button is-primary" href="[[=URL('rider')]]" style="display: inline-block; color: white; font-size: 70px; background-color: rgb(242, 152, 19); height: 100px; line-height: 20px; padding-right: 60px; padding-left: 70px; padding-top: 40px; margin-left: 290px; margin-right: 0; margin-bottom: 300px;" >RIDER</a>
+      </div>
       
       <!-- full width bg image column close -->
     </div>
       
     <!-- full width bg image column close -->
     </div>
-
-    <p> more site info can go here...</p>
 
   <!-- Container close -->
   </div>
