--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,11 @@
 
       <div id="the-navbar-menu" class="navbar-menu">
         <div class="navbar-start">
-          [[block page_menu_items]]<!-- individual pages can add menu items here -->[[end]]
+          [[block page_menu_items]]
+          <!-- individual pages can add menu items here -->
+          
+          
+          [[end]]
         </div>
 
         <div class="navbar-end">
@@ -45,15 +49,11 @@
                     <a class="navbar-item" href="[[=URL('auth/logout')]]">Logout</a>
                     <a class="navbar-item" href="[[=URL('auth/profile')]]">Profile</a>
                     <a class="navbar-item" href="[[=URL('auth/change_password')]]">Change Password</a></li>
-
                   </div>
                 </div>
               [[else:]]
-              <li style="color: white; background-color: rgb(242, 152, 19); width: 330px; height: 80px; 
-              font-size: 50px; padding: 10px; margin-top: 45px; margin-right: 20px; text-align: center; line-height: 55px;">
-                <a class="button is-link" href="[[=URL('auth/register')]]">Sign up</a>
-                <a class="button is-success" href="[[=URL('auth/login')]]">Log in</a>
-              </li>
+                <a class="button is-success" href="[[=URL('auth/login')]]" style="color: white; background-color: rgb(242, 152, 19); width: 330px; height: 80px; 
+                font-size: 50px; padding: 10px; margin-top: 45px; margin-right: 20px; text-align: center; line-height: 55px;">Log In</a>
               [[pass]]
             </div>
           </div>
