--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -5,11 +5,12 @@
 <style>
 .avatar {
     vertical-align: middle;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
-    padding: 10px;
-    
+    margin-left: 80px;
+    margin-top: 40px;
+    padding: 20px; 
 }
 
 
@@ -19,11 +20,16 @@
 
 <title>Edit Profile</title>
 
-<div class="container is-mobile">
+<div class="section">
+    <div class="container is-mobile">
 
     <img src="[[=URL('static', 'profileTemplate.jpg')]]", class="avatar" >
         <a class="icon is-medium"><i class="fa fa-plus"></i>  </a>
     
+</div>
+
+<div class="section">
+    [[=form]]
 </div>
 
 
@@ -31,33 +37,29 @@
 
        <table class="table">
           
-           <tr><td>First Name</td></tr>
-            
-            <tr><td>Last Name</td></tr>
-            
-            <tr><td>Car Make</td></tr>
-            
-            <tr><td>Car Model</td></tr> 
-             
-             <tr><td>Lisence Plate</td></tr> 
-              
-               <tr><td>Number of Seats</td></tr>
-            
-             <tr><td>Schedule:</td></tr>
           <tr>
                <!--insert form here-->
            
            <!--these are the buttons that will add and edit schedules, should schedules be its own database table?-->
            
               <td>
-                <a class="button is-warning is-pulled-right"  href="[[=URL('addSchedule')]]">
-                     <span class="icon is-small"> <i class="fa fa-plus"></i> Add Schedule  </span>
+                <a class="button is-success"  href="[[=URL('addSchedule',user_id)]]">
+                     <span class="icon "> <i class="fa fa-plus"></i>   </span>
+                     <span>Add Schedule</span>
                 </a>
             </td>
         
             <td>        
-                <a class="button is-warning is-pulled-right" href="[[=URL('editSchedule')]]">
+                <a class="button is-warning" href="[[=URL('editSchedule',user_id)]]">
+                    <span class="icon"> <i class="fa fa-bars"></i></span>
                      <span>Edit Schedule  </span>
+                 </a>
+            </td>
+            
+             <td>        
+                <a class="button is-link" href="[[=URL('profile')]]">
+                    <span class="icon"><i class="fa fa-backward"></i> </span>
+                     <span> Back </span>
                  </a>
             </td>
             
@@ -67,7 +69,8 @@
               
               </table>
 
-
+    
+</div>
 
 
 
