--- a/templates/rider.html
+++ b/templates/rider.html
@@ -49,7 +49,7 @@
               </div>
               <div class="control">
                 <a class="button is-primary" href="[[=URL('displayProfile', i['id'])]]">Full Bio</a>
-                <button class="button is-primary">Message</button>
+                <a class="button is-primary" href="[[=URL('message')]]">Message</a>
               </div>
             </div>
           </article>
