--- a/templates/driver.html
+++ b/templates/driver.html
@@ -31,7 +31,7 @@
           <article class="media">
             <div class="media-left">
               <figure class="image is-64x64">
-                <img src="static/profileTemplate.jpg" alt="Profile Picture"> <!-- needs to be i[profilePic] -->
+                <img src="profileTemplate.jpg" alt="Profile Picture"> <!-- needs to be i[profilePic] -->
               </figure>
             </div>
             <div class="media-content">
