--- a/templates/profile.html
+++ b/templates/profile.html
@@ -59,7 +59,7 @@
                 </td>
                 
                 <td>
-                     <a class="button is-link" href="[[=URL('index')]]">
+                     <a class="button is-primary" href="[[=URL('index')]]">
                     <span class="icon"><i class="fa fa-backward"></i> </span>
                      <span> Back </span>
                  </a>
