--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -57,7 +57,7 @@
             </td>
             
              <td>        
-                <a class="button is-link" href="[[=URL('profile')]]">
+                <a class="button is-primary" href="[[=URL('profile')]]">
                     <span class="icon"><i class="fa fa-backward"></i> </span>
                      <span> Back </span>
                  </a>
