--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,8 +66,8 @@
     <!-- end of HTML inserted by extending template -->
     <footer class="footer">
       <div class="content has-text-centered">
-        sjfdbf <a href="https://py4web.com">jdbjdb</a>.
-        <a href="https://learn-py4web.github.io">botttom caption</a>
+        sjfdbf <a href="https://py4web.com">Py4Web</a>.
+        <a href="https://learn-py4web.github.io">Py4Web on Github</a>
       </div>
     </footer>
   </body>
