--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,7 +66,7 @@
     <!-- end of HTML inserted by extending template -->
     <footer class="footer">
       <div class="content has-text-centered">
-        sjfdbf <a href="https://py4web.com">Py4Web</a>.
+        <a href="https://py4web.com">Py4Web</a>.
         <a href="https://learn-py4web.github.io">Py4Web on Github</a>
       </div>
     </footer>
