--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -22,87 +22,55 @@
 
 <div class="section">
     <div class="container is-mobile">
+    <div class="columns">
+      <div class="column is-one-quarter">
+        <img src="[[=URL('static', 'profileTemplate.jpg')]]", class="avatar" >
+      </div>
+      <div class="column">
+          <h1 class="title">Edit [[=account.first_name]]'s Profile</h1>
+          
+          <div class="field">
+            <label class="label"> First Name </label>      
+            <div class="control"><input class="input" type="text" placeholder="[[=account.first_name]]"></div>    
 
-    <img src="[[=URL('static', 'profileTemplate.jpg')]]", class="avatar" >
+            <label class="label"> Last Name </label>      
+            <div class="control"><input class="input" type="text" placeholder="[[=account.last_name]]"></div>   
+            
+            <label class="label"> Location </label>      
+            <div class="control"><input class="input" type="text" placeholder="e.g Oakes College"></div>
+            
+            <label class="label">Category </label>    
+            <div class="control">
+              <label class="radio"><input type="radio" name="question">Driver</label>
+              <label class="radio"><input type="radio" name="question">Rider</label>
+            </div>
+          
+            <label class="label"> Car Make </label>      
+            <div class="control"><input class="input" type="text" placeholder="e.g Kia"></div>
+
+            <label class="label"> Car Model </label>      
+            <div class="control"><input class="input" type="text" placeholder="e.g Sorento"> </div>
+
+            <label class="label">Number of Seats</label>
+            <div class="control">
+              <div class="select">
+                <select>
+                  <option> 1 </option>
+                  <option> 2 </option>
+                  <option> 3 </option>
+                  <option> 4 </option>
+                  <option> 5 </option>
+                  <option> 6 </option>
+                  <option> 7 </option>
+                </select>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
        
     
 </div>
-
-<div class="section">
-      <h1 class="title">Edit [[=account.first_name]]'s Profile</h1>
-    
-    <div class="field">
-        
-    <label class="label"> Full Name </label>      
-    <div class="control">
-         <input class="input" type="text" placeholder="[[=account.first_name+ account.last_name]]">
-     </div>    
-     
-     
-       <label class="label"> Location </label>      
-    <div class="control">
-         <input class="input" type="text" placeholder="e.g Oaks College">
-     </div>
-     
-
-     
-     <label class="label">Category </label>    
-   <div class="control">
-    <label class="radio">
-      <input type="radio" name="question">
-      Driver
-    </label>
-    <label class="radio">
-      <input type="radio" name="question">
-      Rider
-    </label>
-  </div>
-  
-     
-        
-    <label class="label"> Car Make </label>      
-    <div class="control">
-         <input class="input" type="text" placeholder="e.g Kia">
-     </div>
-
-    
-     <label class="label"> Car Model </label>      
-    <div class="control">
-         <input class="input" type="text" placeholder="e.g 2023 Kia Sorento">
-     </div>
-    </div>
-
-    
-  
-   
-        
-    <label class="label">Number of Seats</label>
-    
- <div class="control">
-  <div class="select">
-    <select>
-      <option> 1 </option>
-      <option> 2 </option>
-      <option> 3 </option>
-      <option> 4 </option>
-      <option> 5 </option>
-      <option> 6 </option>
-      <option> 7 </option>
-    </select>
-  </div>
-</div>
-
-
-<div class="field is-grouped">
-    <div class="control">
-  <button class="button is-primary"> Submit </button>
-    
-</div>
-
-</div> 
-     
-    </div>
-
 
 
     
